force-app/main/default/objects/datamask__Masking_Execution_Log__c/fields/datamask__Configuration_Name__c.field-meta.xml
<CustomField>
    <fullName>datamask__Configuration_Name__c</fullName>
    <label>Configuration Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>