force-app/main/default/objects/datamask__Masking_Execution_Log__c/fields/Original_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Original_Created_Date__c</fullName>
    <label>Original Created Date</label>
    <type>DateTime</type>
</CustomField>