force-app/main/default/objects/datamask__Masking_Execution_Log__c/fields/Sandbox_Name__c.field-meta.xml
<CustomField>
    <fullName>Sandbox_Name__c</fullName>
    <label>Sandbox Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>