force-app/main/default/objects/datamask__Masking_Execution_Log__c/fields/Sandbox_Org_ID__c.field-meta.xml
<CustomField>
    <fullName>Sandbox_Org_ID__c</fullName>
    <defaultValue>$Organization.Id</defaultValue>
    <label>Sandbox Org ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>